Prevent current stamina from overflowing on CRB sheet

--- a/src/styles/actor/sidebar/_stamina.scss
+++ b/src/styles/actor/sidebar/_stamina.scss
@@ -14,7 +14,7 @@
         }
         input {
             font-size: 14px;
-            width: 100%;
+            width: 27px;
             color: white;
         }
     }
